--- a/Othello/Othello.vcxproj.filters
+++ b/Othello/Othello.vcxproj.filters
@@ -18,12 +18,18 @@
     <ClInclude Include="Board.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="GameTree.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Othello.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Board.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GameTree.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
