--- a/Othello/Othello.vcxproj
+++ b/Othello/Othello.vcxproj
@@ -156,11 +156,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Board.h" />
-    <ClInclude Include="GameTree.h" />
+    <ClInclude Include="TreeNode.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Board.cpp" />
-    <ClCompile Include="GameTree.cpp" />
+    <ClCompile Include="TreeNode.cpp" />
     <ClCompile Include="Othello.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
